Update Bài_Tập3.1 đến 3.6

--- a/Bài_Tập/Bài_Tập3.1 đến 3.6
+++ b/Bài_Tập/Bài_Tập3.1 đến 3.6
@@ -1,1 +1,11 @@
-
+  Bài_3.1:   Lập chương trình thực hiện các công việc sau:
+          1.	Nhập vào 3 điểm toán, lý, hóa của 1 học sinh
+          2.	Tính  tổng điểm và điểm trung bình của học sinh đó 
+          Mô tả giá trị đầu vào: 
+          Điểm Toán
+          Điểm Lý
+          Điểm Hóa
+          Mô tả giá trị đầu ra:
+          Tổng điểm
+          Trung Bình
+Bài_3.2:  
