Update Bài_Tập3.1 đến 3.6

--- a/Bài_Tập/Bài_Tập3.1 đến 3.6
+++ b/Bài_Tập/Bài_Tập3.1 đến 3.6
@@ -8,4 +8,52 @@
           Mô tả giá trị đầu ra:
           Tổng điểm
           Trung Bình
-Bài_3.2:  
+Bài_3.2:    Lập chương trình thực hiện các công việc sau:
+          1.	Nhập số thực r (r >0) bất kì 
+          2.	Tính chu vi M, diện tích S của hình tròn.
+          Giá trị PI = 3.14159
+          Chú ý: Nếu giá trị đầu vào không thỏa mãn điều kiện, chương trình in ra màn hình chữ ERROR và kết thúc. 
+          Mô tả giá trị đầu vào: 
+          Số thực r
+          Mô tả giá trị đầu ra:
+          Chu vi M
+          Diện tich S
+Bài_3.3:    Lập chương trình thực hiện các công việc sau:
+          1. Nhập 2 số thực X, Y
+          2.Tính các giá trị biểu thức sau
+          A=X2+Y2
+          B=(X+Y)2
+          C=(X−Y)2
+          + Mô tả giá trị đầu vào: 
+            - Số thực X
+            - Số thực Y
+          + Mô tả giá trị đầu ra:
+            - Kết quả A
+            - Kết quả B
+            - Kết quả C
+Bài_3.4:    Viết chương trình yêu cầu người dùng nhập giá chưa có thuế của một kg cà chua, số kg bạn muốn mua và thuế theo đơn vị phần trăm. Chương trình phải tính tổng giá đã             bao gồm thuế.
+          + Mô tả giá trị đầu vào: 
+            - Giá không thuế
+            - Cân nặng
+            - Thuế
+          + Mô tả giá trị đầu ra:
+            -Tổng giá trị sau thuế
+Bài_3.5:    Lập chương trình thực hiện các công việc sau:
+          1.	Nhập 3 số thực x, y, z bất kì.
+          2.	Tính giá trị biểu thức  
+          F=((x+y+z)/(x2+y2+1))−|x−zcos(y)|
+          +Mô tả giá trị đầu vào
+            - Số thực x
+            - Số thực y
+            - Số thực z
+          + Mô tả giá trị đầu ra
+            - Kết quả F
+Bài_3.6:    Lập chương trình thực hiện các công việc sau:
+          1.	Nhập 2 số thực X, Y
+          2.	Tính giá trị biểu thức  F
+          F=Y6+X×Y5+X2×Y4+X3×Y3+X4×Y2+X5×Y+X6
+          + Mô tả giá trị đầu vào: 
+            - Số thực X
+            - Số thực Y
+          + Mô tả giá trị đầu ra:
+            - Kết quả F
