Update Bài_Tập4.1 đến 4.7

--- a/Bài_Tập/Bài_Tập4.1 đến 4.7
+++ b/Bài_Tập/Bài_Tập4.1 đến 4.7
@@ -1,1 +1,62 @@
-
+Bài4.1:   Nhập số nguyên và không âm n với n < 8. 
+        Viết chương trình tính giai thừa của n ( tính n! ). 
+        Note: 
+        - Sử dụng vòng lặp for để giải quyết bài toán.
+        - Nếu dữ liệu đầu vào không đúng mô tả của đề bài, hiển thị ra màn hình "ERROR"
+        + Mô tả giá trị đầu vào: 
+        Số nguyên n
+        + Mô tả giá trị đầu ra:
+        - Kết quả n! 
+Bài_4.2:    Số nguyên tố là một số nguyên dương chỉ chia hết cho 1 và chính nó. Viết chương trình nhập một số nguyên 𝑛 từ bàn phím, kiểm tra xem số nguyên 𝑛 đó có phải là số               nguyên tố hay không và thông báo ra màn hình.
+        + Mô tả dữ liệu đầu vào:
+        Số nguyên  𝑛 
+        + Mô tả dữ liệu đầu ra: 
+        - La so nguyen to
+        - Khong phai so nguyen to
+Bài_4.3:    Lập chương trình thực hiện các công việc sau:
+        - Nhập một số nguyên dương bất kỳ nhỏ hơn 1000
+        - Tính tổng các chữ số của số đó. Ví dụ: số 123 có tổng các chữ số là 1+2+3=6.
+        - Thông báo kết quả ra màn hình.
+        Chú ý:
+        - Sử dụng vòng lặp while để làm
+        - Nếu giá trị nhập vào lớn hơn hoặc bằng 1000 thì in ra màn hình ERROR.
+        + Mô tả giá trị đầu vào:
+        Số nguyên n < 1000
+        + Mô tả giá trị đầu ra: 
+        Tổng các chữ số của số nguyên n
+Bài_4.4:   Viết chương trình thực hiện các công việc sau:
+        - Nhập 2 số nguyên dương 𝑎, 𝑏 bất kỳ
+        - Tìm ước số chung lớn nhất và bội số chung nhỏ nhất của 2 số đó
+        - Hiển thị kết quả ra màn hình
+        Chú ý: Kiểm tra dữ liệu đầu vào của chương trình, nếu không đúng thì kết thúc chương trình và in ra màn hình ERROR.
+        + Mô tả dữ liệu đầu vào:
+        - Số nguyên dương a
+        - Số nguyên dương b
+        + Mô tả dữ liệu đầu ra:
+        - Ước số chung lớn nhất
+        - Bội số chung nhỏ nhất
+Bài_4.5:    Lập chương trình thực hiện các công việc sau:
+        1. Nhập 3 số thực a,b,c bất kì.
+        2. Giải và biện luận phương trình bậc 2:
+        ax2+bx+c=0
+        Tính cả trường hợp với a=0 và trường hợp nghiệm phức.
+        Chú ý :
+        Phương trình vô nghiệm in ra màn hình Phuong trinh vo nghiem
+        Phương trình vô số nghiệm} in ra màn hình Phuong trinh vo so nghiem
+        Nếu phương trình có 2 nghiệm phân biệt thì hiển thị nghiệm lớn trước rồi mới đến nghiệm bé
+        + Mô tả giá trị đầu vào:
+        - Số thực a
+        - Số thực b
+        - Số thực c
+        + Mô tả giá trị đầu ra:
+        - Kết quả
+Bài_4.6:    Viết chương trình tính các tổng sau: 
+        a) S1=1+x+x^2+x^3+⋯+x^n
+        b) S2=1−x+x^2−x^3+⋯+(−1)n×x^n
+        c) S3=1+x/1!+x^2/2!+x^3/3!+⋯+x^n/n!
+        Trong đó n là một số nguyên dương và x là một số thực bất kỳ được nhập từ bàn phím khi chạy chương trình. 
+        Chú ý: Kiểm tra dữ liệu đầu vào của chương trình, nếu không đúng thì kết thúc chương trình và in ra màn hình ERROR.
+        + Mô tả dữ liệu đầu vào:
+        - Số nguyên dương n
+        - Số thực x
+Bài_4.7:    
