--- a/Bài_Tập/Bài_Tập3.1 đến 3.6
+++ b/Bài_Tập/Bài_Tập3.1 đến 3.6
@@ -8,6 +8,7 @@
           Mô tả giá trị đầu ra:
           Tổng điểm
           Trung Bình
+          
 Bài_3.2:    Lập chương trình thực hiện các công việc sau:
           1.	Nhập số thực r (r >0) bất kì 
           2.	Tính chu vi M, diện tích S của hình tròn.
@@ -18,6 +19,16 @@ Bài_3.2:    Lập chương trình thực hiện các công việc sau:
           Mô tả giá trị đầu ra:
           Chu vi M
           Diện tich S
+                            #include<stdio.h>
+                            #define PI 3.14159
+                            int main(){
+                              float M,S,R; 
+                              scanf("%f",&R);
+                              M=2*PI*R;
+                              S=PI*R*R;
+                              printf("%f\n",M);
+                              printf("%f",S);
+                            }
 Bài_3.3:    Lập chương trình thực hiện các công việc sau:
           1. Nhập 2 số thực X, Y
           2.Tính các giá trị biểu thức sau
@@ -31,6 +42,17 @@ Bài_3.3:    Lập chương trình thực hiện các công việc sau:
             - Kết quả A
             - Kết quả B
             - Kết quả C
+                          #include<stdio.h>
+                          int main(){
+                              float x,y,a,b,c;
+                              scanf("%f",&x);
+                              scanf("%f",&y);
+                              printf("%f\n",a=x*x+y*y);
+                              printf("%f\n",b=(x+y)*(x+y));
+                              printf("%f\n",c=(x-y)*(x-y));
+                              return 0;
+                          }
+
 Bài_3.4:    Viết chương trình yêu cầu người dùng nhập giá chưa có thuế của một kg cà chua, số kg bạn muốn mua và thuế theo đơn vị phần trăm. Chương trình phải tính tổng giá đã             bao gồm thuế.
           + Mô tả giá trị đầu vào: 
             - Giá không thuế
@@ -38,6 +60,7 @@ Bài_3.4:    Viết chương trình yêu cầu người dùng nhập giá chưa 
             - Thuế
           + Mô tả giá trị đầu ra:
             -Tổng giá trị sau thuế
+            
 Bài_3.5:    Lập chương trình thực hiện các công việc sau:
           1.	Nhập 3 số thực x, y, z bất kì.
           2.	Tính giá trị biểu thức  
@@ -48,12 +71,39 @@ Bài_3.5:    Lập chương trình thực hiện các công việc sau:
             - Số thực z
           + Mô tả giá trị đầu ra
             - Kết quả F
+                                #include<stdio.h>
+                                #include<math.h> 
+                                int main()
+                                {
+                                    double x,y,z,s;  
+                                    scanf ("%lf%lf%lf",&x,&y,&z);
+                                    double F;
+                                    F=((x+y+z)/(pow(x,2)+pow(y,2)+1.0)-fabs(x-z*cos(y)));
+                                    printf("%f",F);
+                                    return 0;
+                                }
+
 Bài_3.6:    Lập chương trình thực hiện các công việc sau:
           1.	Nhập 2 số thực X, Y
           2.	Tính giá trị biểu thức  F
-          F=Y6+X×Y5+X2×Y4+X3×Y3+X4×Y2+X5×Y+X6
+          F=Y^6+X×Y^5+X^2×Y^4+X^3×Y^3+X^4×Y^2+X^5×Y+X^6
           + Mô tả giá trị đầu vào: 
             - Số thực X
             - Số thực Y
           + Mô tả giá trị đầu ra:
             - Kết quả F
+          
+                                    #include<stdio.h>
+                                    #include<math.h>
+                                    int main(){
+                                      float x,y,f=0;
+                                      int i;
+                                      scanf("%f",&x);
+                                      scanf("%f",&y);
+
+                                      for(i=0;i<=6;i++)
+                                      f+=pow(x,i)*pow(y,6-i);
+                                      printf("%f",f);
+                                      return 0;
+
+                                    }
