Update Bài_Tập3.1 đến 3.6

--- a/Bài_Tập/Bài_Tập3.1 đến 3.6
+++ b/Bài_Tập/Bài_Tập3.1 đến 3.6
@@ -8,7 +8,18 @@
           Mô tả giá trị đầu ra:
           Tổng điểm
           Trung Bình
-          
+                                  #include<stdio.h>
+                                  #include<math.h> 
+                                  int main()
+                                  {
+                                      float a,b,c,tong;
+                                      scanf("%f%f%f",&a,&b,&c); 
+                                      tong = a+b+c;
+                                      printf("%f\n",tong);
+                                      printf("%f",tong/3);	
+
+                                  }
+
 Bài_3.2:    Lập chương trình thực hiện các công việc sau:
           1.	Nhập số thực r (r >0) bất kì 
           2.	Tính chu vi M, diện tích S của hình tròn.
