Update Bài_Tập3.1 đến 3.6

--- a/Bài_Tập/Bài_Tập3.1 đến 3.6
+++ b/Bài_Tập/Bài_Tập3.1 đến 3.6
@@ -71,6 +71,14 @@ Bài_3.4:    Viết chương trình yêu cầu người dùng nhập giá chưa 
             - Thuế
           + Mô tả giá trị đầu ra:
             -Tổng giá trị sau thuế
+            #include<stdio.h>
+            #include<math.h>
+            int main(){
+	          float s,m,n,tong;
+	          scanf("%f %f %f",&s,&m,&n);
+	          tong = s*m+(s*m*n)/100;
+	          printf("%f",tong);
+            }
             
 Bài_3.5:    Lập chương trình thực hiện các công việc sau:
           1.	Nhập 3 số thực x, y, z bất kì.
