--- a/Bài_Tập/Bài_Tập4.1 đến 4.7
+++ b/Bài_Tập/Bài_Tập4.1 đến 4.7
@@ -7,12 +7,81 @@ Bài4.1:   Nhập số nguyên và không âm n với n < 8.
         Số nguyên n
         + Mô tả giá trị đầu ra:
         - Kết quả n! 
+        
+                 #include <stdio.h>
+                 #include <stdlib.h>
+                int main(int argc, char *argv[]) {
+	                int a,i;
+	                int b=1;
+	                scanf("%d", &a);
+	                if(a>=0&&a<=7){
+		                for(i=1; i<=a; i++){
+			        b=b*i;
+		        }
+		        printf("%d", b);
+	                }
+	                 else printf("ERROR");
+                         }
+
+
 Bài_4.2:    Số nguyên tố là một số nguyên dương chỉ chia hết cho 1 và chính nó. Viết chương trình nhập một số nguyên 𝑛 từ bàn phím, kiểm tra xem số nguyên 𝑛 đó có phải là số               nguyên tố hay không và thông báo ra màn hình.
         + Mô tả dữ liệu đầu vào:
         Số nguyên  𝑛 
         + Mô tả dữ liệu đầu ra: 
         - La so nguyen to
         - Khong phai so nguyen to
+        
+        Cách 1: 
+        
+                #include<stdio.h>
+                int main(){
+	        int n,i,a;
+	        scanf("%d",&n);
+	        if(n<2){
+	        printf("Khong phai so nguyen to");
+	        }
+	        else 
+	        {
+		a=0;
+		for(i=2;i<n;i++)
+		{
+			if(n%i==0){
+				a=1;
+			}
+		}
+		if(a==0){
+			printf("La so nguyen to");
+		}
+		else{
+			printf("Khong phai so nguyen to");
+		                }
+	                }
+                }
+        Cách 2:
+                #include <stdio.h>
+                #include <stdlib.h>
+                #include <math.h>
+                /* run this program using the console pauser or add your own getch, system("pause") or input loop */
+                //quanganh-me1-02-20200031
+                int main(int argc, char *argv[]) {
+	        int a,b,i,check;
+	        check=0;
+	        scanf("%d", &a);
+	        if(a<=1){
+		check=1;
+	         goto A;
+                }
+	        b=sqrt(a);
+	        for(i=2; i<=b; i++){
+		        if(a%i==0){
+			        check=1;
+			        break;
+		        }
+	        }
+	        A: if(check==0) printf("La so nguyen to");
+	        else printf("Khong phai so nguyen to");
+                }
+
 Bài_4.3:    Lập chương trình thực hiện các công việc sau:
         - Nhập một số nguyên dương bất kỳ nhỏ hơn 1000
         - Tính tổng các chữ số của số đó. Ví dụ: số 123 có tổng các chữ số là 1+2+3=6.
@@ -24,6 +93,27 @@ Bài_4.3:    Lập chương trình thực hiện các công việc sau:
         Số nguyên n < 1000
         + Mô tả giá trị đầu ra: 
         Tổng các chữ số của số nguyên n
+        
+                #include <stdio.h>
+                #include <stdlib.h>
+
+                /* run this program using the console pauser or add your own getch, system("pause") or input loop */
+                //quanganh-me1-02-20200031
+                int main(int argc, char *argv[]) {
+	        int n,s,k;
+	        s=0;
+	        scanf("%d", &n);
+	                if(n<=0||n>=1000) printf("ERROR");
+	                    else{
+		        while(n>0){
+                                k=n%10;
+                                n=n/10;
+                                s=s+k;
+                                }
+                 printf("%d", s);
+	                }
+                }
+
 Bài_4.4:   Viết chương trình thực hiện các công việc sau:
         - Nhập 2 số nguyên dương 𝑎, 𝑏 bất kỳ
         - Tìm ước số chung lớn nhất và bội số chung nhỏ nhất của 2 số đó
@@ -35,6 +125,26 @@ Bài_4.4:   Viết chương trình thực hiện các công việc sau:
         + Mô tả dữ liệu đầu ra:
         - Ước số chung lớn nhất
         - Bội số chung nhỏ nhất
+        
+                #include <stdio.h>
+                #include <stdlib.h>
+                #include <math.h>
+                int UCLN(int a,int b){
+	                if(b==0) return a;
+	                else return UCLN(b, a%b);
+                }
+                    int main(int argc, char *argv[]) {
+	            int a,b,UCM,BCNN;
+	            scanf("%d%d", &a, &b);
+	            if(a<=0||b<=0) printf("ERROR");
+	                else{
+	                UCM=UCLN(a,b);
+                        BCNN=a*b/UCM;
+		        printf("%d\n%d",UCM,BCNN);
+	                }
+                }
+                
+                
 Bài_4.5:    Lập chương trình thực hiện các công việc sau:
         1. Nhập 3 số thực a,b,c bất kì.
         2. Giải và biện luận phương trình bậc 2:
@@ -50,6 +160,40 @@ Bài_4.5:    Lập chương trình thực hiện các công việc sau:
         - Số thực c
         + Mô tả giá trị đầu ra:
         - Kết quả
+        
+                #include <stdio.h>
+                #include <stdlib.h>
+                #include <math.h>
+                /* run this program using the console pauser or add your own getch, system("pause") or input loop */
+                //quanganh-me1-02-20200031
+                int main(int argc, char *argv[]) {
+	        float a,b,c;
+	        scanf("%f%f%f",&a,&b,&c);
+	                        if(a==0){
+		                if(b==0&&c==0) printf("Phuong trinh vo so nghiem");
+		                        if(b==0&&c!=0) printf("Phuong trinh vo nghiem");
+		                 if(b!=0){
+			                printf("%.6f",-c/b);
+		                        }
+	                }
+	                 else{
+		        float Delta;
+		                Delta=b*b-4*a*c;
+		                if(Delta>0){
+			        printf("%.6f", (-b+sqrt(Delta))/(2*a));
+			        printf("\n%.6f", (-b-sqrt(Delta))/(2*a));
+		        }
+		                if(Delta==0){
+			        printf("%.6f", -b/(2*a));
+		        }
+		        if(Delta<0){
+			        Delta=-Delta;
+			        printf("%.6f+%.6fi", -b/(2*a), sqrt(Delta)/(2*a));
+			        printf("\n%.6f-%.6fi", -b/(2*a), sqrt(Delta)/(2*a));
+		        }
+	                }
+                }
+                
 Bài_4.6:    Viết chương trình tính các tổng sau: 
         a) S1=1+x+x^2+x^3+⋯+x^n
         b) S2=1−x+x^2−x^3+⋯+(−1)n×x^n
@@ -59,4 +203,151 @@ Bài_4.6:    Viết chương trình tính các tổng sau:
         + Mô tả dữ liệu đầu vào:
         - Số nguyên dương n
         - Số thực x
-Bài_4.7:    
+                
+             Cách 1:
+                        #include<stdio.h>
+                        #include<math.h>
+                        int foctorial(int a){
+	                if(a==0)
+	                return 1;
+	                int result =1,i;
+	
+	                for( i= 1; i<= a; i++)
+		        result*=i;
+		        return result;
+	
+                }
+
+                int main(){
+	        int n,i;
+	        float x,s1=0 ,s2=0 ,s3=0;
+	
+	        do{
+		        scanf("%d",&n);
+		        scanf("%f",&x);
+	        }while (n<=0);
+	        for(i = 0;i <=n; i++){
+		s1 += pow(x,i);
+	        }
+	        int sign = 1;
+	                for(i = 0;i <=n; i++){
+		        s2+=pow(-1,i)*pow(x,i);
+	        }
+	        for(i = 0;i <=n; i++){
+		        s3+=pow(x,i)/foctorial(i);
+	        }
+	                printf("%f\n", s1);
+	                printf("%f\n", s2);
+	                printf("%f", s3);
+                }
+                
+                Cách 2: 
+                        #include <stdio.h>
+                        #include <stdlib.h>
+                        #include <math.h>
+                        /* run this program using the console pauser or add your own getch, system("pause") or input loop */
+                        //quanganh-me1-02-20200031
+                        float S1(int n, float x){
+	                float S=1;
+	                int i;
+	                for(i=1; i<=n; i++){
+		                S=S+pow(x,i);
+	                }
+	                return S;
+                                }
+                        float S2(int n,float x){
+	                float S=1;
+	                int i;
+	                for(i=1; i<=n; i++){
+		        S=S+pow((-1),i)*pow(x,i);
+	                        }
+	                return S;
+                        }
+                        float Luythua(int n){
+	                float S=1;
+	                        int i;
+	                        for(i=2; i<=n; i++){
+		                S=S*i;
+	                        }
+	                return S;
+                        }
+                        float S3(int n, float x){
+	                        float S=1;
+	                        int i;
+	                        for(i=1; i<=n; i++){
+		                S=S+pow(x,i)/Luythua(i);
+	                        }
+	                return S;
+                                } 
+                        int main(int argc, char *argv[]) {
+	                        int n;
+	                        float x;
+	                        scanf("%d%f",&n,&x);
+	                        if(n<=0) printf("ERROR");
+	                        else{
+		                printf("%.6f", S1(n,x));
+		                printf("\n%.6f", S2(n,x));
+		                printf("\n%.6f", S3(n,x));
+	                      }
+                        }
+Bài_4.7:   
+
+                        #include <stdio.h>
+                        #include <stdlib.h>
+                        #include <math.h>
+                        /* run this program using the console pauser or add your own getch, system("pause") or input loop */
+                        //quanganh-me1-02-20200031
+                        float S1(int n, float x){
+	                        float S=0;
+	                        int i;
+	                        for(i=1; i<=n; i++){
+		                S=sqrt(x+S);
+	                        }
+	                return S;
+                        }
+                        float S2(int n, float x){
+	                        float S=1;
+	                        int i;
+	                        for(i=1; i<=n; i++){
+		                S=S+pow(x,i)/i;
+	                        }
+	                        return S;
+                        }
+                        float Luythua(int n){
+	                        float S=1;
+	                        int i;
+	                        for(i=2; i<=n; i++){
+		                S=S*i;
+	                }
+	                return S;
+                        }
+                        float S3(int n, float x){
+	                        float S=1;
+	                        int i;
+	                        for(i=1; i<=n; i++){
+		                S=S+pow(x,i)/Luythua(i);
+	                }
+	                return S;
+                        }
+                        float S4(int n, float x){
+	                        float S=1;
+	                        int i;
+	                        for(i=1; i<=n; i++){
+		                S=S+pow((-1),i)*pow(x,i)/Luythua(i);
+	                }
+	                return S;
+                        } 
+                        int main(int argc, char *argv[]) {
+	                        int n;
+	                        float x;
+	                        scanf("%f%d",&x,&n);
+	                        if(n<1||x<0) printf("Error");
+	                        else{
+	                        printf("%.4f", S1(n,x));
+	                        printf("\n%.4f", S2(n,x));
+	                        printf("\n%.4f", S3(n,x));
+	                        printf("\n%.4f", S4(n,x));
+                                }
+                        }
+
+
