Update Bài_Tập3.1 đến 3.6

--- a/Bài_Tập/Bài_Tập3.1 đến 3.6
+++ b/Bài_Tập/Bài_Tập3.1 đến 3.6
@@ -67,7 +67,8 @@ int main(){
   return 0;
   }
 
-Bài_3.4:    Viết chương trình yêu cầu người dùng nhập giá chưa có thuế của một kg cà chua, số kg bạn muốn mua và thuế theo đơn vị phần trăm. Chương trình phải tính tổng giá đã             bao gồm thuế.
+Bài_3.4:    Viết chương trình yêu cầu người dùng nhập giá chưa có thuế của một kg cà chua, số kg bạn muốn mua và thuế theo đơn vị phần trăm. Chương trình phải tính tổng giá đã
+	bao gồm thuế.
           + Mô tả giá trị đầu vào: 
             - Giá không thuế
             - Cân nặng
