Update Bài_Tập5.1 đến 5.6

--- a/Bài_Tập/Bài_Tập5.1 đến 5.6
+++ b/Bài_Tập/Bài_Tập5.1 đến 5.6
@@ -1,1 +1,88 @@
+5.1: Nhập mảng n số nguyên từ bàn phím, in ra màn hình các giá trị từ cuối đến giá trị đầu, sau đó tính tổng các phần tử của mảng.
+Chú ý:
+Nếu n <= 0 in "Error"
+Mô tả giá trị đầu vào:
+Dòng đầu tiên chứa số nguyên dương n và là độ dài của mảng đầu vào.
+Dòng thứ hai chứa n số nguyên.
+Mô tả giá trị đầu ra:
+Dòng đầu tiên là các phần tử của mảng được in theo thứ tự đảo ngược.
+Dòng đầu ra thứ hai là tổng các phần tử của mảng
+Ví dụ:
+Input:
+5
+1 2 3 4 5
+Output:
+5 4 3 2 1
+15
+
+5.2: Nhập mảng số nguyên từ bàn phím. Tính trung bình cộng các số âm, tổng các số dương và đưa kết quả ra màn hình.
+Mô tả giá trị đầu vào:
+- Dòng đầu tiên cho biết số phần tử mảng 𝑛.
+- Dòng thứ 2 chứa giá trị của n phần tử mảng, các phần tử cách nhau một dấu cách.
+Mô tả giá trị đầu ra:
+Một dòng gồm 2 giá trị cách nhau 1 dấu cách:
+- Giá trị trung bình cộng các số âm. nếu mảng chỉ toàn số âm, in ra màn hình Mảng không có số dương.
+- Tổng các số dương, nếu mảng chỉ toàn số dương in ra màn hình Mảng không có số âm.
+Ví dụ:
+Input
+2
+-10 -20
+Output
+-15.000000 Mang khong co so duong
+
+5.3: Nhập mảng 𝑛 số nguyên bất kỳ từ bàn phím. Sắp xếp dãy số theo thứ tự tăng dần và đưa kết quả ra màn hình (Mỗi phần tử cách nhau một dấu cách).
+Mô tả giá trị đầu vào:
+- Dòng đầu tiên cho biết số phần tử mảng 𝑛.
+- Dòng thứ 2 chứa giá trị của 𝑛 phần tử mảng, mỗi phần tử cách nhau một dấu cách.
+Mô tả giá trị đầu ra:
+Các phần tử in ra thành 1 dòng, cách nhau 1 dấu cách. 
+Ví dụ:  
+Input:
+5
+1 4 3 5 2
+Output:
+1 2 3 4 5
+
+5.4: Viết một chương trình nhập một chuỗi S và số nguyên n . Chương trình sẽ cắt chuỗi đó theo số nguyên n.
+Chú ý: Nếu chuỗi đã ngắn hơn n, chương trình không nên thay đổi chuỗi
+Mô tả giá trị đầu vào:
+- Dòng đầu tiên là chuỗi S
+- Dòng thứ 2 là số nguyên n
+Mô tả giá trị đầu ra:
+Chuỗi S đã được rút gọn
+Ví dụ:
+Input: abcde
+3
+Output: abc 
+
+5.5: Viết chương trình đọc hai chuỗi S và T. Đếm số lần mỗi ký tự xuất hiện trong cả hai chuỗi.
+Chú ý:
+Đầu tiên xuất một chuỗi các ký tự riêng biệt trong cả hai chuỗi. Sau đó, đối với mỗi ký tự đó hiển thị ra số lần xuất hiện trong cả hai chuỗi.
+Mô tả giá trị đầu vào:
+Chuỗi S
+Chuỗi T
+Mô tả giá trị đầu ra:
+Một chuỗi các ký tự riêng biệt xuất hiện trong S hoặc T. (Sắp xếp các ký tự này theo thứ tự tăng dần theo giá trị ASCII của chúng).
+Trên mỗi dòng là số lần xuất hiện của một ký tự (theo thứ tự trong chuỗi trên dòng 1).
+Ví dụ:
+Input: aabbaacc
+abbbcaa
+Output: abc
+7
+5
+3
+
+5.6: Lập chương trình thực hiện các công việc sau:
+- Nhập vào từ bàn phím một câu tiêu đề bài báo bất kỳ.
+- Chuẩn hóa xâu đã nhập bằng cách xóa các dấu cách thừa ở đầu, cuối, giữa để đảm bảo chỉ có 1 dấu cách phân tách giữa các từ và chuyển các chữ cái thường thành chữ hoa tương ứng.
+- Đưa câu tiêu đề đã được chuẩn hóa ra màn hình.
+Mô tả giá trị đầu vào: 
+Câu tiêu đề được nhập thành 1 dòng từ bàn phím.
+Mô tả giá trị đầu ra:
+Câu đã chuẩn hóa và độ dài tương ứng được in ra thành 1 dòng với quy cách <nội dung>:<độ dài>.
+Ví dụ:
+Input: Quan    an    bi     xu    phat 
+Output: QUAN AN BI XU PHAT:18
+
+
 
